--- a/main.html
+++ b/main.html
@@ -8,6 +8,49 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bootstrap Buttons</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+    <div class="container mt-5">
+        <h1 class="mb-4">Bootstrap Buttons</h1>
+
+        <!-- Primary Button -->
+        <button id="button-1" class="btn btn-primary mb-3">Primary Button</button>
+
+        <!-- Outline Secondary Button -->
+        <button id="button-2" class="btn btn-outline-secondary mb-3">Outline Secondary Button</button>
+
+        <!-- Success Large Button -->
+        <button id="button-3" class="btn btn-success btn-lg mb-3">Success Large Button</button>
+
+        <!-- Danger Small Button -->
+        <button id="button-4" class="btn btn-danger btn-sm mb-3">Danger Small Button</button>
+
+        <!-- Warning Large Full-Width Button -->
+        <button id="button-5" class="btn btn-warning btn-lg w-100 mb-3">Warning Large Full-Width Button</button>
+
+        <!-- Disabled Info Button -->
+        <button id="button-6" class="btn btn-info mb-3" disabled>Disabled Info Button</button>
+
+        <!-- Light Button -->
+        <button id="button-7" class="btn btn-light mb-3">Light Button</button>
+
+        <!-- Link Button -->
+        <a id="button-8" class="btn btn-link" href="#">Link Button</a>
+    </div>
+
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
