--- a/main.html
+++ b/main.html
@@ -1,14 +1,4 @@
 <!DOCTYPE html>
-
-<html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-	<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -34,10 +24,10 @@
         <button id="button-4" class="btn btn-danger btn-sm mb-3">Danger Small Button</button>
 
         <!-- Warning Large Full-Width Button -->
-        <button id="button-5" class="btn btn-warning btn-lg w-100 mb-3">Warning Large Full-Width Button</button>
+        <button id="button-5" class="btn btn-warning btn-lg vw-100 mb-3">Warning Large Full-Width Button</button>
 
         <!-- Disabled Info Button -->
-        <button id="button-6" class="btn btn-info mb-3" disabled>Disabled Info Button</button>
+        <button id="button-6" class="btn btn-info disabled mb-3">Disabled Info Button</button>
 
         <!-- Light Button -->
         <button id="button-7" class="btn btn-light mb-3">Light Button</button>
@@ -49,11 +39,4 @@
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-</html>
-
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
 </html>
